--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,1 +1,1 @@
-<%=link_to 'Sign out', destroy_account_session_path, :method => :delete %>
+<%= link_to "Sign out", destroy_account_session_path, :method => :delete %>
