added migrations for changing and adding columns and added some associations created views

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,1 +1,5 @@
+<% if current_account.RestaurantOwner? %>
+  <%= link_to "create a restaurant", new_restaurant_path %>
+<% end %>
+
 <%= link_to "Sign out", destroy_account_session_path, :method => :delete %>
